# 2048Puzzle

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  client_test.cpp  game_logic.cpp  game_logic_test.cpp  server.cpp  server_test.cpp  user_logic.cpp  user_logic_test.cpp  utils.cpp
src/include/: client.h  common.h  game_logic.h  server.h  user_logic.h  utils.h
testcases/game_logic/: 1.ans  2.ans  3.ans  4.ans  5.ans  6.ans  6.in  7.ans  7.in  8.ans  8.in
web/: app.js  index.html
